sfdx-source/force-app/main/default/objects/Jurisdiction_Rule__mdt/Jurisdiction_Rule__mdt.object-meta.xml
<CustomObject>
    <description>LEM-14536 - Stores metadata for configurable rules to determine whether records are part of a specific jurisdiction -- city, state, country, or postal code.</description>
    <label>Jurisdiction Rule</label>
    <pluralLabel>Jurisdiction Rules</pluralLabel>
</CustomObject>