sfdx-source/force-app/main/default/objects/Jurisdiction_Rule__mdt/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The city component of the jurisdiction (e.g., &quot;Los Angeles&quot; or &quot;Miami&quot;).</description>
    <inlineHelpText>The city component of the jurisdiction (e.g., &quot;Los Angeles&quot; or &quot;Miami&quot;).</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>