sfdx-source/force-app/main/default/objects/Jurisdiction_Rule__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>The country component of the jurisdiction (e.g., &quot;United States&quot;). This is not necessary if more specific rules are applied. For example, if you have a rule that includes a City of &quot;Austin&quot; and a State of &quot;Texas&quot;, then you do not need to specify a country.</description>
    <inlineHelpText>The country component of the jurisdiction (e.g., &quot;United States&quot;). This is not necessary if more specific rules are applied.</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>