sfdx-source/force-app/main/default/objects/Jurisdiction_Rule__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean that provides an easy way to enable or disable the rule without deleting the metadata.</description>
    <inlineHelpText>Flag that indicates if the rule should remain in use. This allows the easy disablement of rules without metadata delections.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>