sfdx-source/force-app/main/default/objects/Jurisdiction_Rule__mdt/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>The ZIP or Postal Code(s) to evaluate, separated by semi-colons. If multiple codes are specified, the logic will find a match if the evaluated record is in any of the supplied postal codes.</description>
    <inlineHelpText>The ZIP or Postal Code(s) to evaluate, separated by semi-colons. If multiple codes are specified, the logic will find a match if the evaluated record is in any of the supplied postal codes.</inlineHelpText>
    <label>Postal Code</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>