sfdx-source/force-app/main/default/objects/Jurisdiction_Rule__mdt/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <description>The state or province component of the jurisdiction (e.g., &quot;Texas&quot; or &quot;British Columbia&quot;).</description>
    <inlineHelpText>The state or province component of the jurisdiction (e.g., &quot;Texas&quot; or &quot;British Columbia&quot;).</inlineHelpText>
    <label>State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>